<resources>
    <string name="app_name">carterjfowler_A2</string>
    <string name="new_game">New Game</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="filter">Filter by</string>
    <string name="sort">Sort by</string>
    <string name="date">Date</string>
    <string name="winner">Winner</string>
    <string name="show_wins">Show Wins</string>
    <string name="show_losses">Show Losses</string>
    <string name="show_ties">Show Ties</string>
    <string name="title">Tic-Tac-Toe</string>
    <string name="num_players">Multi-Player Game</string>
    <string name="game_settings">Game Settings</string>
    <string name="sys_settings">System Settings</string>
    <string name="first_player">Player 1 goes first</string>
    <string name="player_one_piece">Player 1 plays as X</string>
    <string name="game_result_tie">It\'s a tie!</string>
    <string name="game_result_player1">Player 1 won!</string>
    <string name="game_result_player2">Player 2 won!</string>
    <string name="game_result_computer">The computer won.</string>
    <string name="game_turn_1">It\'s Player 1\'s turn</string>
    <string name="game_turn_2">It\'s Player 2\'s turn</string>
    <string name="play_again_button">Play again</string>
    <string name="return_button">Return</string>

</resources>
