<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/game_settings">
        <SwitchPreferenceCompat
            app:key="multiplayer"
            app:title="@string/num_players"/>
        <SwitchPreference
            app:key="player_one_first"
            app:title="@string/first_player"/>
        <SwitchPreference
            app:key="player_one_x"
            app:title="@string/player_one_piece"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sys_settings">
        <Preference
            app:key="clear_data"
            app:title="Clear Database"
            app:summary="Erase all records of games played"
            app:icon="@drawable/ic_delete"/>
    </PreferenceCategory>

</PreferenceScreen>