<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/new_game"
        android:icon="@drawable/ic_new_game"
        android:title="@string/new_game"
        app:showAsAction="ifRoom|withText" />


<!--    Could not get these items to work, but they could be useful in the future, so I'm just commenting them out-->
<!--    <item-->
<!--        android:id="@+id/filter"-->
<!--        android:title="@string/filter"-->
<!--        android:icon="@drawable/ic_filter"-->
<!--        app:showAsAction="ifRoom|withText">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/show_wins"-->
<!--                android:checkable="true"-->
<!--                android:enabled="true"-->
<!--                android:title="@string/show_wins" />-->
<!--            <item-->
<!--                android:id="@+id/show_losses"-->
<!--                android:checkable="true"-->
<!--                android:enabled="true"-->
<!--                android:title="@string/show_losses" />-->
<!--            <item-->
<!--                android:id="@+id/show_ties"-->
<!--                android:checkable="true"-->
<!--                android:enabled="true"-->
<!--                android:title="@string/show_ties" />-->
<!--        </menu>-->
<!--    </item>-->
<!--    <item-->
<!--        android:id="@+id/sort"-->
<!--        android:title="@string/sort"-->
<!--        android:icon="@drawable/ic_sort"-->
<!--        app:showAsAction="ifRoom|withText">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/sort_date"-->
<!--                android:title="@string/date" />-->
<!--            <item-->
<!--                android:id="@+id/sort_winner"-->
<!--                android:title="@string/winner" />-->
<!--        </menu>-->
<!--    </item>-->
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/exit"
        android:icon="@drawable/ic_exit"
        android:title="@string/exit"
        app:showAsAction="ifRoom|withText"/>
</menu>